--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,11 +1,69 @@
 .nav-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  gap: 20px;
   padding: 16px;
-  background-color: #f4f4f4;
+  background-image: url("../assets/images/bling-background.gif");
+  background-repeat: repeat;
   border-bottom: 1px solid #ddd;
+}
+
+.nav-links {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.hamburger-menu {
+  display: none;
+  cursor: pointer;
+}
+
+.hamburger-icon {
+  width: 30px;
+  height: 24px;
+  position: relative;
+  z-index: 2;
+}
+
+.hamburger-icon span {
+  display: block;
+  position: absolute;
+  height: 4px;
+  width: 100%;
+  background: #fff;
+  border-radius: 4px;
+  opacity: 1;
+  left: 0;
+  transform: rotate(0deg);
+  transition: .25s ease-in-out;
+}
+
+.hamburger-icon span:nth-child(1) {
+  top: 0px;
+}
+
+.hamburger-icon span:nth-child(2) {
+  top: 10px;
+}
+
+.hamburger-icon span:nth-child(3) {
+  top: 20px;
+}
+
+.hamburger-icon.open span:nth-child(1) {
+  top: 10px;
+  transform: rotate(135deg);
+}
+
+.hamburger-icon.open span:nth-child(2) {
+  opacity: 0;
+  left: -60px;
+}
+
+.hamburger-icon.open span:nth-child(3) {
+  top: 10px;
+  transform: rotate(-135deg);
 }
 
 .nav-button {
@@ -21,7 +79,7 @@
 }
 
 .nav-button:hover {
-  background-color: #0056b3;
+  background-image: url("../assets/images/bling-background-pink.gif");
 }
 
 .logout-button {
@@ -30,4 +88,38 @@
 
 .logout-button:hover {
   background-color: #a71d2a;
+}
+
+.app-logo {
+  max-width: 100px;
+}
+
+@media (max-width: 768px) {
+  .nav-links {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    flex-direction: column;
+    width: 70%;
+    height: 100vh;
+    background-image: url("../assets/images/bling-background.gif");
+    border: 5px solid #fff;
+    transition: 0.5s;
+    padding: 80px 20px 20px;
+    z-index: 1;
+  }
+
+  .nav-links.active {
+    right: 0;
+  }
+
+  .hamburger-menu {
+    display: block;
+    z-index: 2;
+  }
+
+  .nav-button {
+    width: 100%;
+    margin: 8px 0;
+  }
 }
