--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,8 +5,10 @@
 .app-container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
   font-family: Arial, sans-serif;
+  background-image: url("../assets/images/red-background.jpg");
+  background-position: center;
+  height: 98vh;
 }
 
 .app-header {
