--- a/src/styles/Tables.css
+++ b/src/styles/Tables.css
@@ -3,59 +3,41 @@
   flex-direction: column;
   padding: 16px;
   font-family: Arial, sans-serif;
-  background-color: #f9f9f9;
+  background-color: #ffffff00;
   height: 100vh;
-}
-
-/* Navigation Bar */
-/* .nav-bar {
-  display: flex;
-  justify-content: flex-end;
-  gap: 16px;
-  padding: 16px;
-  background-color: #f4f4f4;
-  border-bottom: 1px solid #ddd;
-} */
-
-/* .nav-button {
-  padding: 10px 20px;
-  font-size: 14px;
-  font-weight: bold;
-  color: #fff;
-  background-color: #007bff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.nav-button:hover {
-  background-color: #0056b3;
-} */
-
-.logout-button {
-  background-color: #dc3545;
-}
-
-.logout-button:hover {
-  background-color: #a71d2a;
 }
 
 /* Tables Section */
 .tables-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
-  margin-top: 20px;
+  margin: 30px;
+  gap: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  .tables-container {
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
 }
 
 .table-card {
-  background-color: #fff;
+  /* background-color: #fff; */
   padding: 16px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   width: 250px;
   text-align: center;
-  border: 1px solid #ddd;
+  /* border: 1px solid #ddd; */
+  background-image: url("../assets/images/card-carpet.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  /* height: fit-content;
+  width: 50vw; */
 }
 
 .table-card h3 {
