feat : add style and fix languages

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,7 +8,7 @@
   font-family: Arial, sans-serif;
   background-image: url("../assets/images/red-background.jpg");
   background-position: center;
-  height: 98vh;
+  min-height: 98vh;
 }
 
 .app-header {
