--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -7,11 +7,41 @@
 }
 
 .home-container h1 {
-    font-size: 3rem;
+    font-size: 1.5rem;
     margin-bottom: 20px;
     color: #fff;
 }
 
 .home-container img {
-    width: 60%;
+    width: 40%;
+}
+
+img.wordart {
+    height: 200px;
+    width: 400px;
+    margin: 0;
+}
+
+.home-content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.bernard {
+    display: flex;
+    flex-direction: column;
+}
+
+@media screen and (max-width: 768px) {
+    .home-container {
+        height: 100vh;
+    }
+
+    .home-content {
+        flex-direction: column;
+        align-items: center;
+    }
+    
 }
