--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,10 +1,9 @@
-.login-container {
+/* .login-container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
-
-}
+} */
 
 .login-box {
   background-image: url("../assets/images/card-carpet.png");
@@ -15,6 +14,10 @@
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   width: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .login-title {
@@ -45,7 +48,6 @@
 }
 
 .form-input {
-  width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -60,7 +62,6 @@
 .login-button {
   background-color: #007bff;
   color: #fff;
-  width: 50%;
   padding: 10px 15px;
   border: none;
   border-radius: 4px;
